feat: tsx support

--- a/src/view/table/table.module.sass
+++ b/src/view/table/table.module.sass
@@ -5,6 +5,8 @@ $cellColor: #333333
 $headColor: #333333
 $headBackgroundColor: #b1eda8
 
+$bodyBackgroundColor: #ffffff
+
 .table
   width: 100%
   border-collapse: collapse
@@ -17,4 +19,4 @@ $headBackgroundColor: #b1eda8
   text-align: left
 
 .table__body
-  background-color: #ffffff
+  background-color: $bodyBackgroundColor
